--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
+    "axios": "^0.19.0",
     "expo": "~36.0.0",
     "expo-constants": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "^8.0.0",
+    "expo-location": "^8.1.0",
+    "expo-permissions": "^8.1.0",
+    "expo-task-manager": "^8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-global-props": "^1.1.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.4.13",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
